feat(api): use generated open api models (#8)
* feat(15): generate openapi models and use them in getConfig with tests fixed

* feat(15): [WIP] used generated models + get rid of representation layer + fix all testsc

* feat(15): [WIP] fix formatting

* feat(15): [WIP] add bash script to generate openApi models + add openapi folder gitignore

* feat(15): [WIP] script for generating openapi models + added a workflow in the actions

* feat(15): [WIP] specify the relative path for the script

* feat(15): [WIP] fix a typo

* feat(15): [WIP] grant executable permissions to the script

* feat(15): [WIP] comment move to directory

* feat(15): [WIP] fix clippy

* feat(15): [WIP] ensure generate models job before triggering other jobs

* feat(15): [WIP] add generate-openapi models job before the api and ui workflows

* feat(15): [WIP] make the jobs depends on generating models

* feat(15): [WIP]

* feat(15): [WIP]

* feat(15): [WIP]

* feat(15): [WIP]

* feat(15): Add generate openapi models steps to ci/cd jobs

* feat(15): [WIP] generating open api models using Docker image

* feat(15): [WIP] change the output directory

* feat(15): Add readme section for generating models

* feat(15): Move scripts inside api

* feat(15): fix the script path

* feat(15): remove generate_models action

* feat(15): remove the executable permissions to script

* feat(15): remove the executable permissions to script

* feat(15): update CONTRIBUTING.md

* feat(15): remove unnecessary comments

* feat(15): remove .run files

* feat(15): remove boxedModels and fix clippy issues

* feat(15): revert openapi version to 1.0.0
