# openapi.yaml
@@ -3,10 +3,9 @@ openapi: 3.1.0
 info:
   title: Gates API
   version: 1.0.0
-  description: OpenAPI specification for the gates API
+  description: OpenAPI specification for the Gates API
   license:
-    name: MIT Licence
-    identifier: MIT
+    name: MIT License
     url: https://github.com/consid-germany/gates/blob/main/LICENSE
   contact:
     url: https://github.com/consid-germany/gates
@@ -21,7 +20,7 @@ servers:
   - url: http://localhost:9000/api
   - url: https://gates.consid.tech/api
 
-security: []
+security: [ ]
 
 paths:
   /:
@@ -101,38 +100,38 @@ paths:
               schema:
                 $ref: '#/components/schemas/Gate'
           links:
-             ListGates:
-               operationId: list_gates
-             GetGate:
-               operationId: get_gate
-               parameters:
-                 group: '$response.body#/group'
-                 service: '$response.body#/service'
-                 environment: '$response.body#/environment'
-             UpdateGateState:
-               operationId: update_gate_state
-               parameters:
-                 group: '$response.body#/group'
-                 service: '$response.body#/service'
-                 environment: '$response.body#/environment'
-             UpdateDisplayOrder:
-               operationId: update_display_order
-               parameters:
-                 group: '$response.body#/group'
-                 service: '$response.body#/service'
-                 environment: '$response.body#/environment'
-             AddComment:
-               operationId: add_comment
-               parameters:
-                 group: '$response.body#/group'
-                 service: '$response.body#/service'
-                 environment: '$response.body#/environment'
-             DeleteGate:
-               operationId: delete_gate
-               parameters:
-                 group: '$response.body#/group'
-                 service: '$response.body#/service'
-                 environment: '$response.body#/environment'
+            ListGates:
+              operationId: list_gates
+            GetGate:
+              operationId: get_gate
+              parameters:
+                group: '$response.body#/group'
+                service: '$response.body#/service'
+                environment: '$response.body#/environment'
+            UpdateGateState:
+              operationId: update_gate_state
+              parameters:
+                group: '$response.body#/group'
+                service: '$response.body#/service'
+                environment: '$response.body#/environment'
+            UpdateDisplayOrder:
+              operationId: update_display_order
+              parameters:
+                group: '$response.body#/group'
+                service: '$response.body#/service'
+                environment: '$response.body#/environment'
+            AddComment:
+              operationId: add_comment
+              parameters:
+                group: '$response.body#/group'
+                service: '$response.body#/service'
+                environment: '$response.body#/environment'
+            DeleteGate:
+              operationId: delete_gate
+              parameters:
+                group: '$response.body#/group'
+                service: '$response.body#/service'
+                environment: '$response.body#/environment'
         '400':
           $ref: '#/components/responses/BadRequest'
         '403':
@@ -282,7 +281,7 @@ paths:
       tags:
         - gate
       summary: Add a comment to a gate
-      description: | 
+      description: |
         You can add additional notes as `comment` to a gate. E.g. Providing information why you changed the gate state.
         You may use the autogenerated id of the comment to specifically remove it using `delete comment`.
       parameters:
@@ -299,13 +298,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/Gate'
           links:
-             DeleteComment:
-               operationId: delete_comment
-               parameters:
-                 group: '$response.body#/group'
-                 service: '$response.body#/service'
-                 environment: '$response.body#/environment'
-                 comment_id: '$response.body#/comments/0/id'
+            DeleteComment:
+              operationId: delete_comment
+              parameters:
+                group: '$response.body#/group'
+                service: '$response.body#/service'
+                environment: '$response.body#/environment'
+                comment_id: '$response.body#/comments/0/id'
         '204':
           $ref: '#/components/responses/NoContent'
         '400':
@@ -555,7 +554,7 @@ components:
           description: Identifies the stage of your gate. Meaningful choices are product, live, develop, integration, staging, etc...
           example: develop
         gate:
-            $ref: "#/components/schemas/Gate"
+          $ref: "#/components/schemas/Gate"
       required:
         - name
         - gate
@@ -610,12 +609,13 @@ components:
         state:
           $ref: "#/components/schemas/GateState"
       required:
-        - group
+        - state
 
     GateState:
       type: string
       description: This can only be open or closed.
       example: closed
+      default: closed
       enum:
         - open
         - closed
@@ -659,9 +659,22 @@ components:
         - system_time
         - active_hours_per_week
 
+    ActiveHours:
+      type: object
+      properties:
+        start:
+          type: string
+          format: time
+        end:
+          type: string
+          format: time
+      required:
+        - start
+        - end
+
     ActiveHoursPerWeek:
       type: object
-      description: The active business hours of each day of the week from start to end.
+      description: The start and end time of each day.
       properties:
         monday:
           $ref: '#/components/schemas/ActiveHours'
@@ -678,15 +691,7 @@ components:
         sunday:
           $ref: '#/components/schemas/ActiveHours'
 
-    ActiveHours:
-      type: object
-      properties:
-        start:
-          type: string
-          example: 07:00:00
-        end:
-          type: string
-          example: 18:30:00
-      required:
-        - start
-        - end
+
+
+
+
